# nsm

./: .condarc  .env.example  .env.local  .gitignore  CGT_AGENT_README.md  CHECKPOINT_INTEGRATION_SUMMARY.md  CLAUDE.md  DATASET_24K_SUMMARY.md  INSTALL.md  KG_IMPLEMENTATION_SUMMARY.md  MODAL_BEST_PRACTICES.md  MODAL_CGT_DIAGNOSTIC_REPORT.md  MODAL_DEPLOYMENT.md  MODAL_SETUP.md  Makefile  NSM-10-CRITICAL-FINDINGS.md  NSM-10-CROSS-DOMAIN-COMPARISON.md  NSM-10-EVALUATION-PLAN.md  NSM-18-SUMMARY.md  NSM-25-PHASE1-COMPLETE.md  NSM-31-PARALLEL-EXPLORATION.md  NSM-31-TRAINING-FIXES.md  NSM-34-STRATEGIC-IMPLEMENTATION-PLAN.md  NSM-PHASE1.5-SUMMARY.md  NSM-VALIDATION-FRAMEWORK-SUMMARY.md  PR17_CRITICAL_FIXES.md  QA_SUMMARY.md  QUICK_START_MODAL.md  README.md  TERMINOLOGY_UPDATES.md  TWO_WEEK_SPRINT_PLAN.md  analyze_dataset_diversity.py  baselines.jsonl  conftest.py  demo_24k_usage.py  environment-cpu.yml  environment.yml  final_24k_validation.py  pyproject.toml  requirements.txt  (+9 more)
analysis/: README_ISOMORPHISMS.md  additional_isomorphisms.md  isomorphisms_quick_reference.md  phase_transition_results.md  physics_leading_indicator_analysis.py  pid_control_implementation.md
docs/: AGENT_COORDINATION.md  diversity_regularization.md
examples/: basic_usage.py  causal_example.py  knowledge_graph_example.py  planning_example.py  validation_example.py
examples/models/: coupling_example.py  rgcn_example.py
experiments/: AGENTS.md  CGT_INTERPRETATION_GUIDE.md  CGT_UX_IMPROVEMENTS.md  INDEX.md  MODAL_NOTEBOOK_GUIDE.md  MODAL_OPTIMIZATION_REPORT.md  MODAL_QUICKSTART.md  NOTEBOOK_DEPLOYMENT.md  NOTEBOOK_QUICK_REFERENCE.md  NOTEBOOK_TEST_CHECKLIST.md  NOTEBOOK_WORKFLOW.md  README.md  VALIDATION_RESULTS_SUMMARY.md  modal_10x_adaptive.py  modal_10x_baseline.py  modal_10x_fixed_temp.py  modal_6level_validation.py  modal_adaptive_training.py  modal_adaptive_validation.py  modal_cgt_full_training.py  modal_cgt_training.py  modal_cgt_validation.py  modal_cgt_validation_simple.py  modal_chiral_validation.py  modal_combined_validation.py  modal_dual_pass_validation.py  modal_fixed_temp_validation.py  modal_physics_validation.py  modal_pid_validation.py  modal_train.py  modal_train_production.py  nsm_training_notebook.py  phase_transition_validation.py  train_causal.py  train_kg.py  train_planning.py  training_log.jsonl
notes/: ATTENTION_VARIANT_RESULTS.md  CHIRAL_ARCHITECTURE.md  CHIRAL_VARIANT_COMPARISON.md  DUAL_PASS_ARCHITECTURE.md  DUAL_PASS_VALIDATION_RESULTS.md  FULL_CHIRAL_6LEVEL.md  NSM-32-6LEVEL-DESIGN.md  NSM-32-6LEVEL-RESULTS.md  NSM-33-FINAL-SUMMARY.md  NSM-33-PREREGISTRATION.md  NSM-34-CGT-OPERATORS-PREREG.md  NSM-34-EXECUTIVE-SUMMARY.md  NSM-34-FORMALIZATION-GAP-ANALYSIS.md  NSM-34-IMPLEMENTATION-GUIDE.md  NSM-34-QUICK-REFERENCE.md  NSM_PHASE1.5_DECISION_LOG.md  NSM_PHASE1.5_SUMMARY.md
nsm/: __init__.py
nsm/data/: __init__.py  causal_dataset.py  dataset.py  graph.py  knowledge_graph_dataset.py  planning_dataset.py  triple.py  utils.py  vocabulary.py
nsm/evaluation/: __init__.py  causal_metrics.py  kg_metrics.py  planning_metrics.py  preflight_checks.py  process_cleanup.py
nsm/models/: __init__.py  chiral.py  chiral_fixed_temp.py  coupling.py  hierarchical.py  pooling.py  rgcn.py
nsm/models/confidence/: __init__.py  base.py  examples.py  temperature.py  trifold.py
nsm/training/: __init__.py  adaptive_physics_trainer.py  cgt_metrics.py  chiral_loss.py  physics_metrics.py  pid_controller.py  trainer.py
nsm/utils/: __init__.py  baseline_tracker.py  checkpoint_manager.py  warnings.py
nsm/validation/: README.md  __init__.py  test_controller.py  training_models.py
results/: NSM-33_10x_validation_results.md  pid_validation_investigation_report.md
scripts/: compare_domain_results.py  download_checkpoints.py  launch_parallel_training.sh  launch_tmux_training.sh
tests/: __init__.py  pytest_cov_stub.py  test_cgt_temperature.py  test_data_utils.py  test_metrics_fix.py  test_physics_metrics.py  test_preflight_checks.py
tests/data/: test_causal_dataset.py  test_kg_dataset.py  test_planning_dataset.py  test_triple.py  test_vocabulary.py
tests/models/: test_chiral_gradient_flow.py  test_coupling.py  test_rgcn.py
tests/models/confidence/: __init__.py  test_base.py  test_trifold.py
